--- a/SpringBootWebHelloWorld/src/main/resources/templates/userdetails.html
+++ b/SpringBootWebHelloWorld/src/main/resources/templates/userdetails.html
@@ -1,33 +1,32 @@
 <!DOCTYPE html>
 <html>
-<head>
-<meta charset="ISO-8859-1">
-<title>Insert title here</title>
+<head th:replace="fragments/navigation :: htmlhead">
 </head>
 <body>
 
-<h1>User Details</h1>
+	<nav th:replace="fragments/navigation :: bootstrap-navigation"></nav>
 
-<table>
-	<tr>
-		<th>ID</th>
-		<td th:text="${user.id}"></td>
-	</tr>
-	<tr>
-		<th>Name</th>
-		<td th:text="${user.name}"></td>
-	</tr>
-	<tr>
-		<th>Email</th>
-		<td th:text="${user.email}"></td>
-	</tr>
-	<tr>
-		<th>Active</th>
-		<td th:text="${user.active}"></td>
-	</tr>
+	<div class="container">
+		<table>
+			<tr>
+				<th>ID</th>
+				<td th:text="${user.id}"></td>
+			</tr>
+			<tr>
+				<th>Name</th>
+				<td th:text="${user.name}"></td>
+			</tr>
+			<tr>
+				<th>Email</th>
+				<td th:text="${user.email}"></td>
+			</tr>
+			<tr>
+				<th>Active</th>
+				<td th:text="${user.active}"></td>
+			</tr>
 
-</table>
-
+		</table>
+	</div>
 
 
 </body>
