--- a/UsersRestWebService/src/main/resources/templates/index.html
+++ b/UsersRestWebService/src/main/resources/templates/index.html
@@ -28,6 +28,38 @@
 
 </head>
 <body>
+	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+		<div class="container-fluid">
+			<a class="navbar-brand" href="/db/users"><i class="fa fa-users fa-3x"></i></a>
+			
+			<button class="navbar-toggler" type="button"
+				data-bs-toggle="collapse" data-bs-target="#navbarNav"
+				aria-controls="navbarNav" aria-expanded="false"
+				aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarNav">
+				<ul class="navbar-nav">
+					<li class="nav-item">
+						<a th:attr="class=${title == 'User List' ? 'nav-link active' : 'nav-link'}"
+							aria-current="page" href="/db/users">
+							Home
+						</a>
+					</li>
+					<li class="nav-item">
+						<a th:attr="class=${title == 'Add User' ? 'nav-link active' : 'nav-link'}" href="/db/users/add">
+							Add User
+						</a>
+					</li>
+					<li class="nav-item">
+						<a th:attr="class=${title == 'About' ? 'nav-link active' : 'nav-link'}" href="/about">
+							About
+						</a>
+					</li>
+				</ul>
+			</div>
+		</div>
+	</nav>
 
 	<h1>User Manager</h1>
 	<table id="tblUsers" class="table">
@@ -41,9 +73,7 @@
 		</thead>
 		<tbody>
 		</tbody>
-
 	</table>
-
 	<script>
 
 $(document).ready(function() {
@@ -57,9 +87,28 @@ $(document).ready(function() {
 							<td>${data[j].name}</td>
 							<td>${data[j].email}</td>
 							<td>${data[j].active}</td>
+							<td>
+								<button id="btnDelete_${data[j].id}" class="btn btn-danger btnDelete">Delete</button>
+								<button id="btnEdit_${data[j].id}" class="btn btn-success btnEdit">Edit</button>
+							</td>
 						</tr>`);		
 		}
 	});
+	
+	$(document).on("click", ".btnDelete",  function(e) {
+		
+		console.log(e);
+		var id = e.currentTarget.id;
+		
+		alert("you clicked a delete button:" + id);
+	});
+	
+	$(document).on("click", ".btnEdit",  function(e) {
+		
+		
+		alert("you clicked an edit button");
+	});
+	
 });
 
 //	 make an ajax call to the restful web service
